--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,23 @@
 @font-face {
-    font-weight: 400;
+    font-weight: normal;
     font-family: "TT Lakes";
     src: local("TT Lakes Regular"),
         url("../font/TTLakes-Regular.woff");
 }
 
 @font-face {
-    font-weight: 400;
-    font-family: "TT Lakes-Bold";
+    font-weight: bold;
+    font-family: "TT Lakes";
     src: local("TT Lakes Bold"),
         url("../font/TTLakes-Bold.woff");
 }
 
 body {
-    background-color: #F8F8F8;
     font-family: "TT Lakes", sans-serif;
+    font-weight: normal;
+    background-color: #F8F8F8;
     padding: 0;
     margin: 0;
-    
 }
 
 .container {
@@ -53,8 +53,16 @@ button {
 }
 
 .title {
-    font-family: "TT Lakes-Bold";
-    font-weight: 700;
+    position: relative;
+    font-family: "TT Lakes";
+    font-weight: bold;
+    font-size: 28px;
+}
+
+.title svg {
+    position: absolute;
+    top: -8%;
+    left: -5%;
 }
 
 .menu {
@@ -118,9 +126,9 @@ button {
     overflow: auto;
 }
 
-.main__list::-webkit-scrollbar {
+/* .main__list::-webkit-scrollbar {
     width: 0;
-}
+} */
 
 .list__item {
     border: 2px solid transparent;
